--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,11 @@ android {
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
     defaultConfig {
-        applicationId "com.inscripts.cometchatpulse.demo"
+        applicationId "com.unilever.go.walls"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 2001
-        versionName "2.1"
+        versionCode 2006
+        versionName "2.6"
         multiDexEnabled true
         renderscriptSupportModeEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
+    implementation "com.cometchat:pro-ext-pn:1.0.+"
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -69,7 +70,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.airbnb.android:lottie:2.7.0'
     //cometchat sdk
-    implementation 'com.cometchat:pro-android-chat-sdk:1.8.5'
+    implementation 'com.cometchat:pro-android-chat-sdk:1.8.6'
     implementation 'com.github.AppIntro:AppIntro:4.2.3'
     implementation 'com.android.support:recyclerview-selection:28.0.0'
 
@@ -78,6 +79,12 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.google.firebase:firebase-messaging:17.6.0'
+    // dexter runtime permissions
+    implementation 'com.karumi:dexter:4.2.0'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+
 
 }
 
@@ -86,8 +93,12 @@ repositories {
     maven { url 'https://jitpack.io' }
 }
 
+
 configurations {
     all {
         exclude group: 'xpp3', module: 'xpp3'
+        resolutionStrategy.force 'com.github.bumptech.glide:glide:4.8.0'
     }
+
+    apply plugin: 'com.google.gms.google-services'
 }
